# cyberclip

./: .gitignore  .gitlab-ci.yml  404.html  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  app.css  app.py  app.scss  clipParser.py  clipboardHandler.py  generate_doc.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt
CreateNewAction/: index.html
Features tour/: index.html
data/: conf.yml  conf.yml.bak
docs/: CreateNewAction.md  CreateNewParser.md  Features tour.md  Reference.md  index.md
docs/cyberclip/app/: index.html
docs/cyberclip/clipParser/: index.html
docs/cyberclip/clipboardHandler/: index.html
docs/cyberclip/genericEnricher/: index.html
docs/cyberclip/radialUI/: index.html
docs/cyberclip/server/: index.html
docs/cyberclip/tools/: index.html
docs/cyberclip/utilities/: index.html
search/: search_index.json
src/cyberclip/: __init__.py  __main__.py  app.py  app.scss  clipParser.py  clipboardHandler.py  flask_app.py  radialUI.py  server.py  utilities.py
src/cyberclip/data/: conf.yml.bak
src/cyberclip/templates/: index.html
src/cyberclip/tui/: ActionPannel.py  ConfigScreen.py  ContentToolbar.py  ContentView.py  DataTypePannel.py  FileInput.py  GraphPannel.py  JSONSelector.py  ModalParamScreen.py  MultiSelect.py  RecipesPannel.py  SelectionInput.py  SimpleInput.py  TableView.py  TagsInput.py
src/cyberclip/userAction/: AutonomousSystemAction.py  CIDRAction.py  CVEAction.py  DNSAction.py  FileAction.py  HtmlExtractAction.py  IpAndCidrAction.py  JSONAction.py  JSONExtractAction.py  MittreAction.py  RFCAction.py  THCAction.py  TorIPAction.py  URLOpenAction.py  UrlAction.py  UrlRequestAction.py  UrlScanAction.py  __init__.py  actionInterface.py  addYetiAction.py  appendEachLineAction.py  base64Action.py  baseUrlAction.py  countAction.py  crtshAction.py  defangAction.py  domainAction.py  extractAction.py  findReplaceAction.py  ja4Action.py  prependAction.py  prependEachLineAction.py  regexFilterAction.py  reverseRegexFilterAction.py  searchInOpenCTIAction.py  searchInVirusTotal.py  searchShodanAction.py  searchYetiAction.py  sortAction.py  sortDedupAction.py  (+6 more)
src/cyberclip/userTypeParser/: ASNumberParser.py  AnalyticsIdParser.py  B64Parser.py  CSVParser.py  CVEParser.py  HtmlParser.py  IPParser.py  JA4Parser.py  JsonParser.py  LogsParser.py  MD5Parser.py  MitreParser.py  ParserInterface.py  PhoneParser.py  RFCParser.py  TSVParser.py  TextParser.py  URLParser.py  YamlParser.py  mailParser.py  (+4 more)
src/cyberclip_BONGOKNIGHT/: clipParser.py  clipboardHandler.py
src/tui/: ContentToolbar.py  DataTypePannel.py  MultiSelect.py
src/userAction/: MittreAction.py  URLOpenAction.py  actionInterface.py  appendEachLineAction.py  countAction.py  reverseRegexFilterAction.py  sortAction.py  toMarkdownAction.py  toRegexOr.py  topLinesAction.py
src/userTypeParser/: IPParser.py  JsonParser.py  YamlParser.py  filenameParser.py
tests/: test_urlscan.py  test_utils.py
tui/: ActionPannel.py  ConfigScreen.py  ContentToolbar.py  ContentView.py  DataTypePannel.py  ModalParamScreen.py  MultiSelect.py  SelectionInput.py  SimpleInput.py  TableView.py  TagsInput.py
userAction/: AutonomousSystemAction.py  CIDRAction.py  DNSAction.py  HtmlExtractAction.py  IpToAsAction.py  JSONExtractAction.py  MittreAction.py  URLOpenAction.py  UrlRequestAction.py  UrlToHtmlAction.py  actionInterface.py  addYetiAction.py  appendEachLineAction.py  baseUrlAction.py  countAction.py  extractAction.py  findReplaceAction.py  prependAction.py  prependEachLineAction.py  regexFilterAction.py  reverseRegexFilterAction.py  saraOpenerAction.py  searchInOpenCTIAction.py  searchShodanAction.py  searchYetiAction.py  sortAction.py  sortDedupAction.py  toMarkdownAction.py  toRegexOr.py  toSqlSearch.py  topLinesAction.py
userTypeParser/: ASNumberParser.py  B64Parser.py  HtmlParser.py  IPParser.py  JsonParser.py  MD5Parser.py  MitreParser.py  ParserInterface.py  PhoneParser.py  SARAParser.py  TSVParser.py  URLParser.py  YamlParser.py  domainParser.py  mailParser.py  sha1Parser.py
(+92 files in other folders)
