[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0"
  ]
build-backend = "setuptools.build_meta"


[project]
name = "cyberclip"
version = "0.0.1"
authors = [
  { name="BongoKnight" },
]
description = "A parser for handling recognisable data such as IP, domain, MD5 and process them with custom actions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML",
  "XlsxWriter",
  "beautifulsoup4",
  "dnspython",
  "jsonpath",
  "pandas",
  "pycti",
  "pywin32",
  "pyperclip",
  "requests",
  "shodan",
  "textual==0.81.0",
  "textual[syntax]",
  "textual-fspicker==0.0.11",
  "urllib3"
]

[tool.setuptools.package-data]
"cyberclip.data" = ["*.bak"]

[project.scripts]
cyberclip = "cyberclip.app:main"

[project.urls]
Homepage = "https://github.com/BongoKnight/cyberclip"
Issues = "https://github.com/BongoKnight/cyberclip/issues"
