[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0"
  ]
build-backend = "setuptools.build_meta"


[project]
name = "cyberclip"
version = "0.0.3"
authors = [
  { name="BongoKnight" },
]
description = "A parser for handling recognisable data such as IP, domain, MD5 and process them with custom actions."
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML",
  "XlsxWriter",
  "beautifulsoup4",
  "dnspython",
  "jsonpath",
  "jq",
  "pandas",
  "pycti",
  "pywin32; platform_system=='Windows'",
  "pyperclip",
  "requests",
  "shodan",
  "dotenv",
  "netext",
  "textual",
  "textual_serve",
  "textual[syntax]",
  "textual-fspicker",
  "urllib3"
]

[tool.setuptools.package-data]
"cyberclip.data" = ["*.bak"]

[project.scripts]
cyberclip = "cyberclip.app:main"

[project.urls]
Homepage = "https://github.com/BongoKnight/cyberclip"
Issues = "https://github.com/BongoKnight/cyberclip/issues"
